--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     <li><a href="{{site.baseurl}}/about/">About</a></li>
     <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
     <li><a href="{{site.baseful}}/zine/">Zine</a></li>
-    <li><a href="{{site.baseful}}/events.html">Events</a></li>
+    <li><a href="{{site.baseful}}/events/">Events</a></li>
   </ul>
 </div><!-- /.navbar-collapse -->
 </div><!-- /.container-fluid -->
