--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: default
         <ul class="nav navbar-nav navbar-right">
     <li><a href="{{site.baseurl}}/about/">About</a></li>
     <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
-    <li><a href="{{site.basefurl}}/zine/">Zine</a></li>
-    <li><a href="{{site.basefurl}}/events/">Events</a></li>
+    <li><a href="{{site.baseurl}}/zine/">Zine</a></li>
+    <li><a href="{{site.baseurl}}/events/">Events</a></li>
   </ul>
 </div><!-- /.navbar-collapse -->
 </div><!-- /.container-fluid -->
