adding links to homepage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: home
         <ul class="nav navbar-nav navbar-right">
     <li><a href="{{site.baseurl}}/about/">About</a></li>
     <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
-    <li><a href="{{site.baseurl}}/zine/">Zine</a></li>
+    <li><a href="https://omni-seasonal-omens.tumblr.com/">Ether Zine 01: Omni-seasonal Omens</a></li>
     <li><a href="{{site.baseurl}}/events/">Events</a></li>
   </ul>
 </div><!-- /.navbar-collapse -->
