--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@ layout: home
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{site.baseurl}}/about/">About</a></li>
-        <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
+        <li><a href="{{site.baseurl}}/info/">Info</a></li>
         <li><a href="https://omni-seasonal-omens.tumblr.com/">Ether Zine 01: Omni-seasonal Omens</a></li>
         <li><a href="{{site.baseurl}}/events/">Events</a></li>
       </ul>
