--- a/info.html
+++ b/info.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: info
 title: Info
 permalink: /info/
 ---
@@ -13,10 +13,7 @@ permalink: /info/
   </div> <!---end of row-->
 
   <div class="row">
-  <div class="col-md-6">
-      <h2>Contact</h2>
-  </div>
-  <div class="col-md-6">
+  <div class="col-md-8">
     <h3>Write to us if you:</h3>
         <ul>
           <li>want to say hi</li>
