--- a/info.html
+++ b/info.html
@@ -68,4 +68,4 @@ permalink: /info/
      </div><!-- End row -->
 
 
-<h4>Design and Development of Ether Explorations is by [digitalscraps](https://github.com/digitalscraps)</h4>
+<h6>Design and Development of Ether Explorations is by <a href="https://github.com/digitalscraps">digitalscraps</a></h6>
