--- a/info.html
+++ b/info.html
@@ -35,7 +35,7 @@ permalink: /info/
 
          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-             <form id="contact-form" name="myForm" class="form" action="#" onsubmit="return validateForm()" method="POST" role="form">
+             <form id="contact-form" name="myForm" class="form" action="mailto:ether.explorations@gmail.com" onsubmit="return validateForm()" method="POST" role="form">
 
                  <div class="form-group">
                      <label class="form-label" id="nameLabel" for="name"></label>
