--- a/info.html
+++ b/info.html
@@ -20,8 +20,9 @@ permalink: /info/
           <li>are interested in submitting your art</li>
           <li>have ideas for a theme</li>
           <li>want to curate a zine edition</li>
-          <li>want to curate an event(anywhere)</li>
+          <li>want to curate an event (anywhere) </li>
         </ul>
+    <h4><a href="mailto:ether.explorations@gmail.com">ether.explorations@gmail.com</a></h4>
   </div>
 </div><!--end of row-->
 
