--- a/info.html
+++ b/info.html
@@ -4,7 +4,10 @@ title: Info
 permalink: /info/
 ---
 
-<div class="mt50"></div>
+<div class="mt50">
+  <h4>The best way to get in touch is to send an email to<br>
+    <a href="mailto:ether.explorations@gmail.com">ether.explorations@gmail.com</a></h4>
+</dvi>
 
 <div class="row">
     <div class="col-lg-12">
@@ -22,7 +25,7 @@ permalink: /info/
           <li>want to curate a zine edition</li>
           <li>want to curate an event (anywhere) </li>
         </ul>
-    <h4><a href="mailto:ether.explorations@gmail.com">ether.explorations@gmail.com</a></h4>
+
   </div>
 </div><!--end of row-->
 
