--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: home
             <ul class="nav navbar-nav navbar-right">
         <li><a href="{{site.baseurl}}/info/">Info</a></li>
         <li><a href="https://omni-seasonal-omens.tumblr.com/">Ether Zine 01: Omni-seasonal Omens</a></li>
-        <li><a href="{{site.baseurl}}/events/">Events</a></li>
+        <li><a href="{{site.baseurl}}/news/">News</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
