--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
                     <h3 class="panel-title pull-left">{{ post.title | truncate: 25 }}</h3><span class="post-meta pull-right"><small>{{ post.date | date: "%b %-d, %Y" }}</small></span>
                   </div>
                   {% if post.img %}
-                  <a href="{{ post.url | prepend: site.baseurl }}"<img width="100%" src="{{site.baseurl}}/images/{{post.img}}" alt="{{post.title}}"></a>
+                  <a href="{{ post.url | prepend: site.baseurl }}"><img width="100%" src="{{site.baseurl}}/images/{{post.img}}" alt="{{post.title}}"></a>
                   {% else %}
                   <img width="100%" src="{{site.baseurl}}/images/webjeda-logo-big.jpg" alt="{{site.title}}">
                   {% endif %}
