--- a/info.html
+++ b/info.html
@@ -5,6 +5,13 @@ permalink: /info/
 ---
 
 <div class="mt50">
+  <h3>About</h3>
+    <p>Ether Explorations is a collaborative series consisting of compilations, webzines, and events.</p><br>
+    <p>With each installation, we seek to explore the personal and collective associations we have with a different element of our external and internal worlds.</p><br>
+    <p>Just as we have our own associations with the symbolic elemental structure of our own universe (earth, air, water, fire), we hold attachments to other elements as well – elements, which could be emblems of other universes.</p>
+</div>
+
+<div class="mt50">
   <h4>The best way to get in touch is to send an email to<br>
     <a href="mailto:ether.explorations@gmail.com">ether.explorations@gmail.com</a></h4>
 </dvi>
