updating info page

--- a/info.html
+++ b/info.html
@@ -11,27 +11,25 @@ permalink: /info/
     <p>Just as we have our own associations with the symbolic elemental structure of our own universe (earth, air, water, fire), we hold attachments to other elements as well – elements, which could be emblems of other universes.</p>
 </div>
 
-<div class="mt50">
-  <h4>The best way to get in touch is to send an email to<br>
-    <a href="mailto:ether.explorations@gmail.com">ether.explorations@gmail.com</a></h4>
-</dvi>
-
 <div class="row">
-    <div class="col-lg-12">
-      <h2>Ether is a series of compilations, webzines, and events created through international collaborative effort.</h2>
-    </div>
-  </div> <!---end of row-->
-
-  <div class="row">
-  <div class="col-md-8">
-    <h3>Write to us if you:</h3>
-        <ul>
-          <li>want to say hi</li>
-          <li>are interested in submitting your art</li>
-          <li>have ideas for a theme</li>
-          <li>want to curate a zine edition</li>
-          <li>want to curate an event (anywhere) </li>
-        </ul>
-
+  <div class="col-sm-12 col-lg-6">
+  <h3>Event Series | earth, air, water, fire</h3>
+    <p>On the second Wednesday of each month, Resonator Art Space in Norman, OK hosts a collaboratively curated evening of experimental performance by local artists.<br>
+      Past performances have been in the form of sound, spoken word, movement, and film. Promotion for the events has also included visual, design, and written collaboration.<br>
+      We welcome all forms of performance and installation art as a part of these events.<br>
+      Write to us if you are interested in performing in one of these events in Norman or starting a series at an art space in your locality.</p>
   </div>
-</div><!--end of row-->
+
+  <div class="col-sm-12 col-lg-6">
+  <h3>Webzine + Compilation Album Series | non-physical</h3>
+    <p>Each webzine + compilation album focuses on the exploration of personal and/or collective associations with one non-physical element.<br>
+      It could be a feeling, an abstract element of our world or a hypothetical physical element of another dimension.<br>
+      Write to us if you have any suggestions of elements to explore or want to participate in any way. Everyone is welcome to contribute.</p>
+  </div>
+</div> <!---end of row-->
+
+
+<div class="col-sm-12 col-lg-6 mt50">
+  <p>The best way to get in touch is to send an email to<br>
+    <a href="mailto:ether.explorations@gmail.com">ether.explorations@gmail.com</a></p>
+</div>
