updating this clusterfuck

--- a/events.html
+++ b/events.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-permalink: /events/
 ---
 
 <div class="home">
@@ -11,18 +10,16 @@ permalink: /events/
         {% for post in paginator.posts %}
             <div class="col-md-4 card">
 
-                <div class="panel panel-default">
+                <div class="et__panel">
                   <div class="panel-body">
                     <h3 class="panel-title pull-left">{{ post.title | truncate: 25 }}</h3><span class="post-meta pull-right"><small>{{ post.date | date: "%b %-d, %Y" }}</small></span>
                   </div>
                   {% if post.img %}
-                  <img width="100%" src="{{site.baseurl}}/images/{{post.img}}" alt="{{post.title}}">
+                  <a href="{{ post.url | prepend: site.baseurl }}"><img width="100%" src="{{site.baseurl}}/images/{{post.img}}" alt="{{post.title}}"></a>
                   {% else %}
                   <img width="100%" src="{{site.baseurl}}/images/webjeda-logo-big.jpg" alt="{{site.title}}">
                   {% endif %}
-                  <div class="panel-body"><small>
-                    {{ post.excerpt | strip_html | strip_newlines | truncate: 160 }}</small>
-                    <a href="{{ post.url | prepend: site.baseurl }}" class="btn btn-primary btn-sm pull-right mt10">Read</a>
+                  <div class="panel-body"><small>{{ post.excerpt | strip_html | strip_newlines | truncate: 50 }}</small>
                   </div>
                 </div>
             </div>
