--- a/index.html
+++ b/index.html
@@ -1,63 +1,70 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Cubby Template</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+</head>
+<body>
 
-<div class="home">
+
+		<header class="main-header">
+					<div class="header-inner">
+					<h1 class="name"><a href="#">Cubby</a></h1>
+					<ul class="main-nav">
+						<li><a href="#">Info</a></li>
+						<li><a href="#"><i class="fa fa-instagram fa-5x" aria-hidden="true"></i></a></li>
+						<li><a href="#/"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a></li>
+					</ul>
+				</div>
+		</header><!--end of header-->
+
+		<div class="banner">
+			<img class="logo" src="img/logo.svg" alt="logo">
+				<h1 class="headline">Cubby</h1>
+					<span class="headline" id="tagline"> A design template by digital scraps</span>
+		</div><!--end of banner-->
 
 
-    <div class="row pack">
+		<div class="row main">
 
-        {% for post in paginator.posts %}
-            <div class="col-md-4 card">
+			<div class="primary col">
+				<h2>Cubby</h2>
+				<!--featured image -->
+				<figure>
+				<img class="icon-logo" src="img/logo.svg" alt="small logo">
+				<img class="feat-img" src="img/dash.svg" alt="Stuff and Stuff">
+					<figcaption>
+						<h4>Scribble Scrabble</h4>
+					</figcaption>
+				</figure>
+					<p> A responsive design template by digital scraps</p>
+					<p>Climb a tree, wait for a fireman jump to fireman then scratch his face ignore the squirrels.</p>
+					<p>you'll never catch them anyway give attitude i like big cats and i can not lie, the dog smells bad run in circles.</p>
+			</div> <!--end /.primary-->
 
-                <div class="et__panel">
-                  <div class="panel-body">
-                    <h3 class="panel-title pull-left">{{ post.title | truncate: 25 }}</h3><span class="post-meta pull-right"><small>{{ post.date | date: "%b %-d, %Y" }}</small></span>
-                  </div>
-                  {% if post.img %}
-                  <a href="{{ post.url | prepend: site.baseurl }}"><img width="100%" src="{{site.baseurl}}/images/{{post.img}}" alt="{{post.title}}"></a>
-                  {% else %}
-                  <img width="100%" src="{{site.baseurl}}/images/webjeda-logo-big.jpg" alt="{{site.title}}">
-                  {% endif %}
-                  <div class="panel-body"><small>{{ post.excerpt | strip_html | strip_newlines | truncate: 50 }}</small>
-                  </div>
-                </div>
-            </div>
+			<div class="secondary col">
+				<h2>Ybbuc</h2>
+					<p>That is cubby spelled backwards</p>
+					<p>This is a <a href="https://www.bigyouth.fr/en">site</a> I am inspired by to make this template better</p>
+			</div> <!--secondary-->
 
-          {% endfor %}
 
-    </div>
 
-<div class="row">
-    <div class="col-md-4">  </div>
-    <div class="col-md-4">
-        {% if paginator.total_pages > 1 %}
-        <ul class="pagination">
-          {% if paginator.previous_page %}
-            <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a></li>
-          {% else %}
-            <li><span>&laquo; Prev</span></li>
-          {% endif %}
+			<div class="tertiary col">
+				<h2>Ybbuc</h2>
+					<p>That is cubby spelled backwards</p>
+					<p>This is a <a href="https://www.bigyouth.fr/en">site</a> I am inspired by to make this template better</p>
+			</div> <!--end of tertiary-->
 
-          {% for page in (1..paginator.total_pages) %}
-            {% if page == paginator.page %}
-              <li class="active"><span><em>{{ page }}</em></span></li>
-            {% elsif page == 1 %}
-            <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a></li>
-            {% else %}
-            <li><a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a></li>
-            {% endif %}
-          {% endfor %}
+		</div><!--end of container main-->
 
-          {% if paginator.next_page %}
-            <li><a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a></li>
-          {% else %}
-            <li><span >Next &raquo;</span></li>
-          {% endif %}
-          </ul>
-        {% endif %}
+		<footer class="main-footer">
+			<span>&copy;2016 Cubby by Allison Campbell</span>
+		</footer>
 
-    </div>
-    <div class="col-md-4">  </div>
-</div>
-</div>
+</body>
+</html>
+<script src="https://use.fontawesome.com/59e86e0655.js"></script>
