updating index page

--- a/index.html
+++ b/index.html
@@ -2,67 +2,65 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cubby Template</title>
+	<title>Ether Explorations</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 </head>
 <body>
 
-
 		<header class="main-header">
 					<div class="header-inner">
-					<h1 class="name"><a href="#">Cubby</a></h1>
+					<h1 class="name">Ether Explorations</h1>
 					<ul class="main-nav">
-						<li><a href="#">Info</a></li>
-						<li><a href="#"><i class="fa fa-instagram fa-5x" aria-hidden="true"></i></a></li>
-						<li><a href="#/"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a></li>
+						<!--<li><a href="#">Info</a></li>-->
+						<li><a href="http://facebook.com/etherexplorations/"><i class="fa fa-facebook fa-5x" aria-hidden="true"></i></a></li>
+						<li><a href="https://soundcloud.com/etherexplorations"><i class="fa fa-soundcloud fa-5x" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 		</header><!--end of header-->
 
 		<div class="banner">
-			<img class="logo" src="img/logo.svg" alt="logo">
-				<h1 class="headline">Cubby</h1>
-					<span class="headline" id="tagline"> A design template by digital scraps</span>
+			<!--<img class="logo" src="img/logo.svg" alt="logo">-->
+				<h1 class="headline">Fresh</h1>
+					<span class="headline" id="tagline"> Web Zine</span>
 		</div><!--end of banner-->
+
 
 
 		<div class="row main">
 
 			<div class="primary col">
-				<h2>Cubby</h2>
+				<h2>Ether 05: Water</h2>
 				<!--featured image -->
-				<figure>
+				<!--<figure>
 				<img class="icon-logo" src="img/logo.svg" alt="small logo">
 				<img class="feat-img" src="img/dash.svg" alt="Stuff and Stuff">
 					<figcaption>
-						<h4>Scribble Scrabble</h4>
+						<h4>Join us for Ether 05: Water</h4>
 					</figcaption>
-				</figure>
-					<p> A responsive design template by digital scraps</p>
-					<p>Climb a tree, wait for a fireman jump to fireman then scratch his face ignore the squirrels.</p>
-					<p>you'll never catch them anyway give attitude i like big cats and i can not lie, the dog smells bad run in circles.</p>
+				</figure>-->
+					<p>The Ether Explorations event series seeks to facilitate reflection on our personal and collective associations to the symbolic elemental structure of our external and internal worlds through experimental performance.</p>
+          <p>Join us for Ether 05 Water at Resonator Art Space</p>
+          <p>Find out <a href="https://www.facebook.com/events/1252856334795356/">more</a></p>
 			</div> <!--end /.primary-->
 
 			<div class="secondary col">
-				<h2>Ybbuc</h2>
-					<p>That is cubby spelled backwards</p>
-					<p>This is a <a href="https://www.bigyouth.fr/en">site</a> I am inspired by to make this template better</p>
+				<h2>About Ether</h2>
+					<p>Find out <a href="https://www.facebook.com/etherexplorations/">more</a></p>
 			</div> <!--secondary-->
 
 
 
 			<div class="tertiary col">
-				<h2>Ybbuc</h2>
-					<p>That is cubby spelled backwards</p>
-					<p>This is a <a href="https://www.bigyouth.fr/en">site</a> I am inspired by to make this template better</p>
+				<h2>Contact</h2>
+					<p>The best way to get a hold of us</p>
+					<p>Email us at <a href="mailto:etherexploartions@gmail.com">etherexplorations@gmail.com</a></p>
 			</div> <!--end of tertiary-->
 
 		</div><!--end of container main-->
 
 		<footer class="main-footer">
-			<span>&copy;2016 Cubby by Allison Campbell</span>
+			<span>&copy;2017 Ether Explorations</span>
 		</footer>
 
 </body>
