--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ether Explorations</title>
-	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-		<header class="main-header">
+		<header class="nav">
 					<div class="header-inner">
 					<h1 class="name">Ether Explorations</h1>
 					<ul class="main-nav">
@@ -19,43 +19,48 @@
 				</div>
 		</header><!--end of header-->
 
-		<div class="banner">
+		<div class="mt-5 container banner">
 			<!--<img class="logo" src="img/logo.svg" alt="logo">-->
 				<h1 class="headline">Fresh</h1>
 					<span class="headline" id="tagline"> Web Zine</span>
 		</div><!--end of banner-->
 
+		<div class="container">
 
+		<div class="row">
 
-		<div class="row main">
+			<div class="primary col-xs-12 col-lg-12">
 
-			<div class="primary col">
-				<h2>Ether 05: Water</h2>
+				<div class="col-xs-12 col-sm-8 col-md-8 col-lg-8"
 				<!--featured image -->
-				<!--<figure>
-				<img class="icon-logo" src="img/logo.svg" alt="small logo">
-				<img class="feat-img" src="img/dash.svg" alt="Stuff and Stuff">
+				<div class="featured-img">
+				<h2>Ether 05: Water</h2>
+				<figure>
+				<img class="feat-img" style="height: 200px; overflow: hidden;" src="images/katie_water.jpg" alt="Ether 05 Water artwork by Katie">
 					<figcaption>
-						<h4>Join us for Ether 05: Water</h4>
+						<h4>Find out <a href="https://www.facebook.com/events/1252856334795356/">more</a></h4>
 					</figcaption>
-				</figure>-->
-					<p>The Ether Explorations event series seeks to facilitate reflection on our personal and collective associations to the symbolic elemental structure of our external and internal worlds through experimental performance.</p>
-          <p>Join us for Ether 05 Water at Resonator Art Space</p>
-          <p>Find out <a href="https://www.facebook.com/events/1252856334795356/">more</a></p>
+				</figure>
+				</div>
 			</div> <!--end /.primary-->
 
-			<div class="secondary col">
-				<h2>About Ether</h2>
+			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+				<h3>About Ether</h3>
 					<p>Find out <a href="https://www.facebook.com/etherexplorations/">more</a></p>
 			</div> <!--secondary-->
+		</div>
+		</div> <!--end of tertiary-->
 
-
-
-			<div class="tertiary col">
+			<div class="row">
+			<div class="col-sm-12 col-lg-12" style="margin-top: 50px">
+				<div>
 				<h2>Contact</h2>
 					<p>The best way to get a hold of us</p>
 					<p>Email us at <a href="mailto:etherexploartions@gmail.com">etherexplorations@gmail.com</a></p>
-			</div> <!--end of tertiary-->
+				</div>
+			</div>
+		</div>
+
 
 		</div><!--end of container main-->
 
