--- a/index.html
+++ b/index.html
@@ -1,73 +1,103 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Ether Explorations</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8">
+  <title>Ether Explorations</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link rel="stylesheet" src="css/ether.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!--Fonts -->
+  <script src="https://use.fontawesome.com/40a3ac7d65.js"></script>
+  <script src="https://use.typekit.net/qih8zrr.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
+
 <body>
+<!--wrapper-->
+    <div class="container ether-container">
+    <div class="row">
+      <div class="col-sm-10 col-lg-10 mx-auto" style="background-color:#fff;">
 
-		<header class="nav">
-					<div class="header-inner">
-					<h1 class="name">Ether Explorations</h1>
-					<ul class="main-nav">
-						<!--<li><a href="#">Info</a></li>-->
-						<li><a href="http://facebook.com/etherexplorations/"><i class="fa fa-facebook fa-5x" aria-hidden="true"></i></a></li>
-						<li><a href="https://soundcloud.com/etherexplorations"><i class="fa fa-soundcloud fa-5x" aria-hidden="true"></i></a></li>
-					</ul>
-				</div>
-		</header><!--end of header-->
+<!--responsive menu-->
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse mt-2">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">Ether Explorations</a>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Info</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Events</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Zine
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">Omni-seasonal Omens</a>
+          <a class="dropdown-item" href="#">Fresh</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-		<div class="mt-5 container banner">
-			<!--<img class="logo" src="img/logo.svg" alt="logo">-->
-				<h1 class="headline">Fresh</h1>
-					<span class="headline" id="tagline"> Web Zine</span>
-		</div><!--end of banner-->
+  <!--carosel-->
+<div id="carouselExampleIndicators" class="carousel slide mt-3 mb-3" data-ride="carousel" style="background-color:pink">
+<ol class="carousel-indicators">
+  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+  <!--<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
+</ol>
+<div class="carousel-inner" role="listbox">
+  <div class="carousel-item active">
+    <img class="d-block img-fluid mx-auto" src="images/fresh-slide.svg" alt="First slide" style="height: 300px;">
+  </div>
+  <div class="carousel-item">
+    <img class="d-block img-fluid mx-auto" src="images/ether-about-slide.svg" alt="Second slide" style="height: 300px;">
+  </div>
+  <!--<div class="carousel-item">
+    <img class="d-block img-fluid mx-auto" src="img/wei3.jpg" alt="Third slide" style="height: 300px;">
+  </div>-->
+</div>
+<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <span class="sr-only">Next</span>
+</a>
+</div>
 
-		<div class="container">
+<!--homepage gallery-->
+  <div class="row mb-3">
+  <!--Image One-->
+    <div class="col-sm-12 col-md-8 col-lg-8 pb-2">
+        <img class="mx-auto" src="img/wei4.jpg" style="width: 100%; height: 300px; overflow: hidden;">
+    </div>
 
-		<div class="row">
+  <!--Image Two-->
+    <div class="col-sm-12 col-md-4 col-lg-4">
+        <img class="mx-auto wei-img-1" src="img/wei3.jpg" style="width: 100%; height: 300px; overflow: hidden;">
+    </div>
 
-			<div class="primary col-xs-12 col-lg-12">
+</div> <!--/row gallery-->
+</div><!--/wrapper col-->
+</div><!--/wrapper row-->
+</div><!--/wrapper-->
 
-				<div class="col-xs-12 col-sm-8 col-md-8 col-lg-8"
-				<!--featured image -->
-				<div class="featured-img">
-				<h2>Ether 05: Water</h2>
-				<figure>
-				<img class="feat-img" style="height: 200px; overflow: hidden;" src="images/katie_water.jpg" alt="Ether 05 Water artwork by Katie">
-					<figcaption>
-						<h4>Find out <a href="https://www.facebook.com/events/1252856334795356/">more</a></h4>
-					</figcaption>
-				</figure>
-				</div>
-			</div> <!--end /.primary-->
-
-			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-				<h3>About Ether</h3>
-					<p>Find out <a href="https://www.facebook.com/etherexplorations/">more</a></p>
-			</div> <!--secondary-->
-		</div>
-		</div> <!--end of tertiary-->
-
-			<div class="row">
-			<div class="col-sm-12 col-lg-12" style="margin-top: 50px">
-				<div>
-				<h2>Contact</h2>
-					<p>The best way to get a hold of us</p>
-					<p>Email us at <a href="mailto:etherexploartions@gmail.com">etherexplorations@gmail.com</a></p>
-				</div>
-			</div>
-		</div>
-
-
-		</div><!--end of container main-->
-
-		<footer class="main-footer">
-			<span>&copy;2017 Ether Explorations</span>
-		</footer>
-
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
-</html>
-<script src="https://use.fontawesome.com/59e86e0655.js"></script>
+
+
+<html>
