--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 </ol>
 <div class="carousel-inner" role="listbox">
   <div class="carousel-item active">
-    <img class="d-block img-fluid mx-auto" src="images/fresh-slide.svg" alt="First slide" style="height: 300px;">
+    <a href="fresh.html"><img class="d-block img-fluid mx-auto" src="images/fresh-slide.svg" alt="First slide" style="height: 300px;"></a>
   </div>
   <div class="carousel-item">
-    <img class="d-block img-fluid mx-auto" src="images/ether-about-slide.svg" alt="Second slide" style="height: 300px;">
+    <a href="info.html"><img class="d-block img-fluid mx-auto" src="images/ether-about-slide.svg" alt="Second slide" style="height: 300px;"></a>
   </div>
   <!--<div class="carousel-item">
     <img class="d-block img-fluid mx-auto" src="img/wei3.jpg" alt="Third slide" style="height: 300px;">
@@ -81,13 +81,18 @@
   <div class="row mb-3">
   <!--Image One-->
     <div class="col-sm-12 col-md-8 col-lg-8 pb-2">
-        <img class="mx-auto" src="img/wei4.jpg" style="width: 100%; height: 300px; overflow: hidden;">
+        <h4>Ether Explorations is a collaborative series consisting of compilations, webzines, and events.</h4>
+        <a href="mailto:etherexplorations@gmail.com">get in touch</a>
     </div>
 
   <!--Image Two-->
     <div class="col-sm-12 col-md-4 col-lg-4">
-        <img class="mx-auto wei-img-1" src="img/wei3.jpg" style="width: 100%; height: 300px; overflow: hidden;">
+        <a href="http://bit.ly/ether-05"><img class="mx-auto" src="images/ether05-water.svg" style="width: 100%; overflow: hidden;"></a>
     </div>
+
+    <footer class="mt-5 mx-auto">
+      <p>ether explortations 2017</p>
+    </footer>
 
 </div> <!--/row gallery-->
 </div><!--/wrapper col-->
