--- a/info.html
+++ b/info.html
@@ -1,8 +1,19 @@
----
-layout: info
-title: Info
-permalink: /info/
----
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Ether Explorations</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link rel="stylesheet" src="css/ether.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!--Fonts -->
+  <script src="https://use.fontawesome.com/40a3ac7d65.js"></script>
+  <script src="https://use.typekit.net/qih8zrr.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+</head>
+
+<body>
 
 <div class="mt50">
   <h3>About</h3>
@@ -33,3 +44,4 @@ permalink: /info/
   <p>The best way to get in touch is to send an email to<br>
     <a href="mailto:ether.explorations@gmail.com">ether.explorations@gmail.com</a></p>
 </div>
+</body>
