--- a/zine.html
+++ b/zine.html
@@ -46,39 +46,32 @@
   </div>
 </nav>
 
-<div class="mt-5">
-  <h3>About</h3>
-    <p>Ether Explorations is a collaborative series consisting of compilations, webzines, and events.</p>
-    <p>With each installation, we seek to explore the personal and collective associations we have with a different element of our external and internal worlds.</p>
-    <p>Just as we have our own associations with the symbolic elemental structure of our own universe (earth, air, water, fire), we hold attachments to other elements as well – elements, which could be emblems of other universes.</p>
-</div>
 
-<div class="row">
-  <div class="col-sm-12 col-lg-6 mt-3">
-  <h3>Event Series | earth, air, water, fire</h3>
-    <p>On the second Wednesday of each month, Resonator Art Space in Norman, OK hosts a collaboratively curated evening of experimental performance by local artists.<br>
-      Past performances have been in the form of sound, spoken word, movement, and film. Promotion for the events has also included visual, design, and written collaboration.<br>
-      We welcome all forms of performance and installation art as a part of these events.<br>
-      Write to us if you are interested in performing in one of these events in Norman or starting a series at an art space in your locality.</p>
+<!--homepage gallery-->
+  <div class="row mb-3">
+  <!--Image One-->
+    <div class="col-sm-12 col-md-12 col-lg-12 mt-5">
+        <a href="mailto:etherexplorations@gmail.com"><img src="images/fresh-slide.svg"  style="width: 100%; overflow: hidden;"></a>
+    </div>
+
+  <!--Image Two-->
+  <div class="col-sm-12 col-md-12 col-lg-12 mt-5">
+      <a href="https://omni-seasonal-omens.tumblr.com/"><img src="images/omni.jpg"  style="width: 100%; overflow: hidden;"></a>
   </div>
 
-  <div class="col-sm-12 col-lg-6 mt-3">
-  <h3>Webzine + Compilation Album Series | non-physical</h3>
-    <p>Each webzine + compilation album focuses on the exploration of personal and/or collective associations with one non-physical element.<br>
-      It could be a feeling, an abstract element of our world or a hypothetical physical element of another dimension.<br>
-      Write to us if you have any suggestions of elements to explore or want to participate in any way. Everyone is welcome to contribute.</p>
-  </div>
-</div> <!---end of row-->
+    <footer class="mt-5 mx-auto">
+      <span>&copy;2017 ether explorations</span>
+    </footer>
 
+</div> <!--/row gallery-->
+</div><!--/wrapper col-->
+</div><!--/wrapper row-->
+</div><!--/wrapper-->
 
-<div class="row">
-<div class="col-sm-12 col-lg-6 mt-5">
-  <h3>The best way to get in touch is to send an email to</h3>
-    <a href="mailto:ether.explorations@gmail.com">ether.explorations@gmail.com</a></p>
-</div>
-</div>
-
-</div>
-</div>
-</div>
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
+
+
+<html>
