--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 <!--wrapper-->
-    <div class="container ether-container">
+    <div class="container">
     <div class="row">
       <div class="col-sm-10 col-lg-10 mx-auto" style="background-color:#fff;">
 
@@ -34,12 +34,12 @@
         <a class="nav-link" href="events.html">Events</a>
       </li>-->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="zine.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Zine
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Omni-seasonal Omens</a>
-          <a class="dropdown-item" href="#">Fresh</a>
+          <a class="dropdown-item" href="https://omni-seasonal-omens.tumblr.com/">Omni-seasonal Omens</a>
+          <a class="dropdown-item" href="fresh.html">Fresh</a>
         </div>
       </li>
     </ul>
@@ -47,7 +47,7 @@
 </nav>
 
   <!--carosel-->
-<div id="carouselExampleIndicators" class="carousel slide mt-3 mb-3" data-ride="carousel" style="background-color:pink">
+<div id="carouselExampleIndicators" class="carousel slide mt-3 mb-3" data-ride="carousel" style="background-color:">
 <ol class="carousel-indicators">
   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -55,10 +55,10 @@
 </ol>
 <div class="carousel-inner" role="listbox">
   <div class="carousel-item active">
-    <a href="fresh.html"><img class="d-block img-fluid mx-auto" src="images/fresh-slide.svg" alt="First slide" style="height: 300px;"></a>
+    <a href="fresh.html" class="mx-auto"><img class="d-block img-fluid mx-auto" src="images/fresh-slide.svg" alt="First slide" style="height: 300px;"></a>
   </div>
   <div class="carousel-item">
-    <a href="info.html"><img class="d-block img-fluid mx-auto" src="images/ether-about-slide.svg" alt="Second slide" style="height: 300px;"></a>
+    <a href="info.html" class="mx-auto"><img class="d-block img-fluid mx-auto" src="images/ether-about-slide.svg" alt="Second slide" style="height: 300px;"></a>
   </div>
   <!--<div class="carousel-item">
     <img class="d-block img-fluid mx-auto" src="img/wei3.jpg" alt="Third slide" style="height: 300px;">
@@ -88,7 +88,7 @@
     </div>
 
     <footer class="mt-5 mx-auto">
-      <p>ether explortations 2017</p>
+      <span>&copy;2017 ether explorations</span>
     </footer>
 
 </div> <!--/row gallery-->
