updating background styles

--- a/zine.html
+++ b/zine.html
@@ -13,9 +13,9 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 
-<body>
+<body style="background-color:#fffdf0;">
 <!--wrapper-->
-    <div class="container">
+    <div class="container" style="background-color: #d0f5ed;">
     <div class="row">
       <div class="col-sm-10 col-lg-10 mx-auto" style="background-color:#fff;">
 
@@ -51,7 +51,7 @@
   <div class="row mb-3">
   <!--Image One-->
     <div class="col-sm-12 col-md-12 col-lg-12 mt-5">
-        <a href="mailto:etherexplorations@gmail.com"><img src="images/fresh-slide.svg"  style="width: 100%; overflow: hidden;"></a>
+        <a href="fresh.html"><img src="images/fresh-slide.svg"  style="width: 100%; overflow: hidden;"></a>
     </div>
 
   <!--Image Two-->
