--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 
-<body>
+<body style="background-color:#fffdf0;">
 <!--wrapper-->
-    <div class="container">
+    <div class="container" style="background-color: #d0f5ed;">
     <div class="row">
-      <div class="col-sm-10 col-lg-10 mx-auto" style="background-color:#fff;">
+      <div class="col-sm-10 col-lg-10 mx-auto">
 
 <!--responsive menu-->
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse mt-2">
