--- a/info.html
+++ b/info.html
@@ -13,9 +13,9 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 
-<body>
+<body style="background-color:#fffdf0;">
 <!--wrapper-->
-    <div class="container">
+        <div class="container" style="background-color: #d0f5ed;">
     <div class="row">
       <div class="col-sm-10 col-lg-10 mx-auto" style="background-color:#fff;">
 
