--- a/index.html
+++ b/index.html
@@ -3,103 +3,101 @@
 <head>
   <meta charset="utf-8">
   <title>Ether Explorations</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <link rel="stylesheet" src="css/ether.css">
+   <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/component.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!--Fonts -->
   <script src="https://use.fontawesome.com/40a3ac7d65.js"></script>
-  <script src="https://use.typekit.net/qih8zrr.js"></script>
+  <script src="https://use.typekit.net/xzc7xys.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
-</head>
+  </head>
+  <body>
 
-<body style="background-color:#fffdf0;">
-<!--wrapper-->
-    <div class="container" style="background-color: #d0f5ed;">
-    <div class="row">
-      <div class="col-sm-10 col-lg-10 mx-auto">
+  <!--Navbar with Logo on Left and Links on Right-->
+    <nav class="l-nb-f">
+      <a class="img l-nb-item l-nb-start" href="index.html">logo</a>
+      <div class="l-nb-link-container">
+        <a class="l-nb-item" href="home.html">Info</a>
+        <a class="l-nb-item" href="gallery.html">Zine</a>
+      </div>
+  </nav>
 
-<!--responsive menu-->
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse mt-2">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="index.html">Ether Explorations</a>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="info.html">Info<span class="sr-only">(current)</span></a>
-      </li>
-      <!--<li class="nav-item">
-        <a class="nav-link" href="events.html">Events</a>
-      </li>-->
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="zine.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Zine
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="https://omni-seasonal-omens.tumblr.com/">Omni-seasonal Omens</a>
-          <a class="dropdown-item" href="fresh.html">Fresh</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-  <!--carosel-->
-<div id="carouselExampleIndicators" class="carousel slide mt-3 mb-3" data-ride="carousel" style="background-color:">
-<ol class="carousel-indicators">
-  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-  <!--<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
-</ol>
-<div class="carousel-inner" role="listbox">
-  <div class="carousel-item active">
-    <a href="fresh.html" class="mx-auto"><img class="d-block img-fluid mx-auto" src="images/fresh-slide.svg" alt="First slide" style="height: 300px;"></a>
-  </div>
-  <div class="carousel-item">
-    <a href="info.html" class="mx-auto"><img class="d-block img-fluid mx-auto" src="images/ether-about-slide.svg" alt="Second slide" style="height: 300px;"></a>
-  </div>
-  <!--<div class="carousel-item">
-    <img class="d-block img-fluid mx-auto" src="img/wei3.jpg" alt="Third slide" style="height: 300px;">
-  </div>-->
-</div>
-<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-  <span class="sr-only">Previous</span>
-</a>
-<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-  <span class="sr-only">Next</span>
-</a>
-</div>
-
-<!--homepage gallery-->
-  <div class="row mb-3">
-  <!--Image One-->
-    <div class="col-sm-12 col-md-8 col-lg-8 pb-2">
-        <h4>Ether Explorations is a collaborative series consisting of compilations, webzines, and events.</h4>
-        <a href="mailto:etherexplorations@gmail.com">get in touch</a>
+  <main>
+  <!--Feature Content Section-->
+    <a href="index.html">
+        <header class="l-fc l-fc-f">
+          <h2>Ether Explorations</h2>
+          <h3>is a collaborative series consiting of compilations, webzines, and <a href="index.html">Performances</a></h3>
+      </header>
+    </a>
+<!--Row 1-->
+  <section class="flex-container">
+    <div class="box-dark flex-twothirds">
+      <p>Zine 02</p>
+      <h2>Fresh</h2>
     </div>
 
-  <!--Image Two-->
-    <div class="col-sm-12 col-md-4 col-lg-4">
-        <a href="http://bit.ly/ether-05"><img class="mx-auto" src="images/ether05-water.svg" style="width: 100%; overflow: hidden;"></a>
+    <div class="box-med flex-square">
+      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
+    </div>
+  </section>
+
+  <!--Gallery-->
+  <section class="flex-container">
+     <div class="box-med flex-square">
+      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
     </div>
 
-    <footer class="mt-5 mx-auto">
-      <span>&copy;2017 ether explorations</span>
-    </footer>
+    <div class="box-dark flex-twothirds">
+      <p>Connect</p>
+      <h2>Facebook</h2>
+    </div>
+  </section>
 
-</div> <!--/row gallery-->
-</div><!--/wrapper col-->
-</div><!--/wrapper row-->
-</div><!--/wrapper-->
+  <section class="flex-container">
+    <div class="box-dark flex-twothirds">
+      <p>What is Ether?</p>
+      <h2>About</h2>
+    </div>
 
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+     <div class="box-med flex-square">
+      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
+    </div>
+  </section>
+
+  <!--Two Pictures with Links-->
+    <section class="flex-container">
+      <div class="box-med flex-square">
+      <a href="http://placehold.it"><img src="http://placehold.it/260x260"></a>
+    </div>
+    <div class="box-med flex-square">
+      <a href="http://placehold.it"><img src="http://placehold.it/260x260"></a>
+    </div>
+    </section>
+
+    <!--contact-->
+    <section class="flex-container">
+     <div class="box-med flex-twothirds">
+      <p>Contact</p>
+    </div>
+
+    <div class="box-dark flex-square">
+      <p>Want to Get Involved?</p>
+      <h2>Contact</h2>
+    </div>
+  </section>
+
+
+
+  <footer>
+    <a href="#"><i class="fa fa-facebook fa-4" aria-hidden="true"></i></a>
+    <a href="#"><i class="fa fa-instagram fa-4" aria-hidden="true"></i></a>
+    <p>&copy; 2017 Alli Campbell</p>
+  </footer>
+
+   </main>
+
 </body>
-
-
 <html>
