--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <!--Row 1-->
   <section class="flex-container">
     <div class="box-dark flex-twothirds">
-      <p>Zine 02</p>
-      <h2>Fresh</h2>
+      <p>Zine 01</p>
+      <h3>Omniseaonsal Omens</h3>
     </div>
 
     <div class="box-med flex-square">
@@ -51,15 +51,15 @@
     </div>
 
     <div class="box-dark flex-twothirds">
-      <p>Connect</p>
-      <h2>Facebook</h2>
+      <p>Event</p>
+      <h2>Ether 08 Air</h2>
     </div>
   </section>
 
   <section class="flex-container">
     <div class="box-dark flex-twothirds">
-      <p>What is Ether?</p>
-      <h2>About</h2>
+      <p>Get Involeved</p>
+      <h2>Contribute</h2>
     </div>
 
      <div class="box-med flex-square">
@@ -80,12 +80,13 @@
     <!--contact-->
     <section class="flex-container">
      <div class="box-med flex-twothirds">
-      <p>Contact</p>
+      
     </div>
 
     <div class="box-dark flex-square">
-      <p>Want to Get Involved?</p>
+      <p>Say Hi</p>
       <h2>Contact</h2>
+      <h3><a href="mailto:etherexplorations@gmail.com">etherexplorations@gmail.com</h3>
     </div>
   </section>
 
