--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Ether Explorations</title>
-   <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/component.css">
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://use.fontawesome.com/40a3ac7d65.js"></script>
@@ -15,7 +16,9 @@
 
   <!--Navbar with Logo on Left and Links on Right-->
     <nav class="l-nb-f">
-      <a class="img l-nb-item l-nb-start" href="index.html"><img src="http://placehold.it/200x80"></a>
+      <a class="img l-nb-item l-nb-start"  href="index.html">
+        <img id="logo" src="img/logo.svg">
+        </a>
       <div class="l-nb-link-container">
         <a class="l-nb-item" href="info.html">Info</a>
         <a class="l-nb-item" href="contributors.html">Contributors</a>
@@ -24,68 +27,69 @@
       </div>
   </nav>
 
-  <main>
+
   <!--Feature Content Section-->
     <a href="index.html">
-        <header class="box-dark l-fc l-fc-f l-fc-background">
+        <header class="soft-blend l-fc l-fc-f l-fc-background">
           <h1>Ether Explorations</h1>
-          <a href="index.html" class="button">Check it out</a>
       </header>
     </a>
+
+ <main>
 <!--Row 1-->
   <section class="flex-container">
-    <div class="box-dark flex-twothirds">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
+    <div class="flex-twothirds">
+      <p>Webzine + Compilation #02</p>
+      <h2 class="lpink">Fresh</h2>
     </div>
 
-    <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
+    <div class="flex-square">
+      <a href="http://placehold.it"><img src="img/sq.png"></a>
     </div>
   </section>
 
+ 
   <!--Gallery-->
   <section class="flex-container">
-     <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
+     <div class=" flex-square">
+      <a href="http://placehold.it"><img src="img/sq.png"></a>
     </div>
 
-    <div class="box-dark flex-twothirds">
+    <div class="flex-twothirds">
       <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
+      <h2 class="lpink">New Event</h2>
     </div>
   </section>
 
-  <section class="flex-container">
-    <div class="box-dark flex-twothirds">
+  <!--<section class="flex-container">
+    <div class="flex-twothirds">
       <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
+      <h2 class="lblue">New Event</h2>
     </div>
 
-     <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
+     <div class="flex-square">
+      <a href="http://placehold.it"><img src="img/sq.png"></a>
     </div>
-  </section>
+  </section> -->
 
   <!--Two Pictures with Links-->
     <section class="flex-container">
-      <div class="box-med flex-square">
+      <div class="flex-square">
       <a href="http://placehold.it"><img src="http://placehold.it/260x260"></a>
     </div>
-    <div class="box-med flex-square">
+    <div class="flex-square">
       <a href="http://placehold.it"><img src="http://placehold.it/260x260"></a>
     </div>
     </section>
 
     <!--contact-->
     <section class="flex-container">
-     <div class="box-med flex-twothirds">
+     <div class="flex-twothirds">
       <p>Contact</p>
     </div>
 
-    <div class="box-dark flex-square">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
+    <div class="flex-square">
+      <h2 class="lorange">New Event</h2>
     </div>
   </section>
 
