adding grid to contributors

--- a/contributors.html
+++ b/contributors.html
@@ -28,15 +28,13 @@
   <!--Feature Content Section-->
     <a href="index.html">
         <header class="box-dark l-fc l-fc-f l-fc-background">
-          <h1>Ether Explorations</h1>
-          <a href="index.html" class="button">Check it out</a>
+          <h1>Contributors</h1>
       </header>
     </a>
 <!--Row 1-->
-  <section class="flex-container">
-    <div class="box-dark flex-twothirds">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
+  <section class="grid-container">
+    <div>
+      
     </div>
 
     <div class="box-med flex-square">
