updating links and styles

--- a/contributors.html
+++ b/contributors.html
@@ -15,7 +15,9 @@
 
   <!--Navbar with Logo on Left and Links on Right-->
     <nav class="l-nb-f">
-      <a class="img l-nb-item l-nb-start" href="index.html"><img src="http://placehold.it/200x80"></a>
+      <a class="img l-nb-item l-nb-start"  href="index.html">
+        <img id="logo" src="img/logo.svg">
+        </a>
       <div class="l-nb-link-container">
         <a class="l-nb-item" href="info.html">Info</a>
         <a class="l-nb-item" href="contributors.html">Contributors</a>
@@ -33,58 +35,7 @@
     </a>
 <!--Row 1-->
   <section class="grid-container">
-    <div>
-      
-    </div>
-
-    <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
-    </div>
-  </section>
-
-  <!--Gallery-->
-  <section class="flex-container">
-     <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
-    </div>
-
-    <div class="box-dark flex-twothirds">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
-    </div>
-  </section>
-
-  <section class="flex-container">
-    <div class="box-dark flex-twothirds">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
-    </div>
-
-     <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
-    </div>
-  </section>
-
-  <!--Two Pictures with Links-->
-    <section class="flex-container">
-      <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/260x260"></a>
-    </div>
-    <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/260x260"></a>
-    </div>
-    </section>
-
-    <!--contact-->
-    <section class="flex-container">
-     <div class="box-med flex-twothirds">
-      <p>Contact</p>
-    </div>
-
-    <div class="box-dark flex-square">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
-    </div>
+  
   </section>
 
 
