--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
   <!--Feature Content Section-->
     <a href="index.html">
-        <header class="soft-blend l-fc l-fc-f l-fc-background">
-          <h1>Ether Explorations</h1>
+        <header class="l-fc l-fc-f l-fc-background">
+          <h1 class="lblue">Ether Explorations</h1>
       </header>
     </a>
 
@@ -56,7 +56,7 @@
     </div>
 
     <div class="flex-twothirds">
-      <p>Introductory Pharse</p>
+      <p>Introductory Phrase</p>
       <h2 class="lpink">New Event</h2>
     </div>
   </section>
@@ -99,7 +99,7 @@
     <a href="#"><i class="fa fa-facebook fa-4" aria-hidden="true"></i></a>
     <a href="#"><i class="fa fa-soundcloud fa-4" aria-hidden="true"></i></a>
     <a href="#"><i class="fa fa-bandcamp fa-4" aria-hidden="true"></i></a>
-    <p>&copy; 2017 Ether Explorations</p>
+    <h5>&copy; 2017 Ether Explorations</h5>
   </footer>
 
    </main>
