--- a/zine.html
+++ b/zine.html
@@ -15,11 +15,13 @@
 
   <!--Navbar with Logo on Left and Links on Right-->
     <nav class="l-nb-f">
-      <a class="img l-nb-item l-nb-start" href="index.html"><img src="http://placehold.it/200x80"></a>
+        <a class="img l-nb-item l-nb-start"  href="index.html">
+        <img id="logo" src="img/logo.svg">
+        </a>
       <div class="l-nb-link-container">
         <a class="l-nb-item" href="info.html">Info</a>
         <a class="l-nb-item" href="contributors.html">Contributors</a>
-        <a class="l-nb-item" href="zine.html">Zine</a>
+        <a class="l-nb-item" href="zine.html">Webzine</a>
         <a class="l-nb-item" href="events.html">Events</a>
       </div>
   </nav>
@@ -28,8 +30,7 @@
   <!--Feature Content Section-->
     <a href="index.html">
         <header class="box-dark l-fc l-fc-f l-fc-background">
-          <h1>Ether Explorations</h1>
-          <a href="index.html" class="button">Check it out</a>
+          <h1>WebZine</h1>
       </header>
     </a>
 <!--Row 1-->
@@ -66,29 +67,6 @@
       <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
     </div>
   </section>
-
-  <!--Two Pictures with Links-->
-    <section class="flex-container">
-      <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/260x260"></a>
-    </div>
-    <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/260x260"></a>
-    </div>
-    </section>
-
-    <!--contact-->
-    <section class="flex-container">
-     <div class="box-med flex-twothirds">
-      <p>Contact</p>
-    </div>
-
-    <div class="box-dark flex-square">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
-    </div>
-  </section>
-
 
 
   <footer>
