--- a/info.html
+++ b/info.html
@@ -15,7 +15,9 @@
 
   <!--Navbar with Logo on Left and Links on Right-->
     <nav class="l-nb-f">
-      <a class="img l-nb-item l-nb-start" href="index.html"><img src="http://placehold.it/200x80"></a>
+      <a class="img l-nb-item l-nb-start"  href="index.html">
+        <img id="logo" src="img/logo.svg">
+        </a>
       <div class="l-nb-link-container">
         <a class="l-nb-item" href="info.html">Info</a>
         <a class="l-nb-item" href="contributors.html">Contributors</a>
@@ -24,35 +26,60 @@
       </div>
   </nav>
 
+<main>
     <!--Feature Content Section-->
-        <header class="l-fc l-fc-f l-fc-background">
-          <h1>Title</h1>
+        <header class="l-fc l-fc-f">
+          <h1>Ether</h1>
+          <h4>Ether Explorations is a collaborative series consisting of compilations, webzines, and events.</h4>
         <p>
-            Leverage agile frameworks to provide a robust synopsis for high level overviews.
-            Iterative approaches to corporate strategy foster collaborative thinking to further 
-            the overall value proposition. Organically grow the holistic world view of disruptive 
-            innovation via workplace diversity and empowerment.
+            With each installation, we seek to explore the personal and collective associations we have with a 
+            different element of our external and internal worlds. Just as we have our own associations with the 
+            symbolic elemental structure of our own universe (earth, air, water, fire), we hold attachments to other 
+            elements as well – elements, which could be emblems of other universes.
         </p>
       </header>
     
     <section class="l-fc">
-        <h4>Clients by day, Clients by night</h4>
+        <h4>Event Series | earth, air, water, fire</h4>
         <p>
-            Leverage agile frameworks to provide a robust synopsis for high level overviews.
-            Iterative approaches to corporate strategy foster collaborative thinking to further 
-            the overall value proposition. Organically grow the holistic world view of disruptive 
-            innovation via workplace diversity and empowerment.
+          On the second Wednesday of each month, Resonator Art Space in Norman, OK hosts a collaboratively curated 
+          evening of experimental performance by local artists. Past performances have been in the form of sound, spoken word, 
+          movement, and film. Promotion for the events has also included visual, design, and written collaboration. 
+          We welcome all forms of performance and installation art as a part of these events.
         </p>
 
         <p>
-            Leverage agile frameworks to provide a robust synopsis for high level overviews.
-            Iterative approaches to corporate strategy foster collaborative thinking to further 
-            the overall value proposition. Organically grow the holistic world view of disruptive 
-            innovation via workplace diversity and empowerment.
+          Each event focuses on one of the physical elements (earth, air, water, fire) and the artists 
+          are encouraged to express their personal or collective associations/attachments/aversions to the 
+          element and what it symbolizes for them.
+        </p>
+
+        <a href="events.html"><h5>Events</h5></a>
+
+        <h4>Webzine + Compilation Album Series | non-physical</h4>
+        <p>
+          Each webzine + compilation album focuses on the exploration of personal and/or collective associations with one non-physical element. 
+          It could be a feeling, an abstract element of our world or a hypothetical physical element of another dimension. 
+        </p>
+
+        <a href="zine.html"><h5>WebZines</h5></a>
+
+        <p>
+          Write to <a href="mailto:ether.explorations@gmail.com">ether.explorations@gmail.com</a> if you have any suggestions of elements to explore or want to participate in any way. 
+          Everyone is welcome to contribute.
         </p>
 
     </section>
-        
+
+
+  <footer>
+    <a href="#"><i class="fa fa-facebook fa-4" aria-hidden="true"></i></a>
+    <a href="#"><i class="fa fa-soundcloud fa-4" aria-hidden="true"></i></a>
+    <a href="#"><i class="fa fa-bandcamp fa-4" aria-hidden="true"></i></a>
+    <h5>&copy; 2017 Ether Explorations</h5>
+  </footer>
+
+  </main>
 
 
 
