cleaning up static template

--- a/events.html
+++ b/events.html
@@ -21,7 +21,7 @@
       <div class="l-nb-link-container">
         <a class="l-nb-item" href="info.html">Info</a>
         <a class="l-nb-item" href="contributors.html">Contributors</a>
-        <a class="l-nb-item" href="zine.html">Zine</a>
+        <a class="l-nb-item" href="zine.html">Webzine</a>
         <a class="l-nb-item" href="events.html">Events</a>
       </div>
   </nav>
