--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
         <img id="logo" src="img/logo.svg">
         </a>
       <div class="l-nb-link-container">
-        <a class="l-nb-item" href="info.html">Info</a>
-        <a class="l-nb-item" href="contributors.html">Contributors</a>
-        <a class="l-nb-item" href="zine.html">Zine</a>
         <a class="l-nb-item" href="events.html">Events</a>
+        <a class="l-nb-item" href="contributors.html">Contributors</a>
+        <a class="l-nb-item" href="zine.html">Webzine</a>
+        <a class="l-nb-item" href="info.html">Info</a>
+
       </div>
   </nav>
 
 
   <!--Feature Content Section-->
-    <a href="index.html">
-        <header class="l-fc l-fc-f l-fc-background">
-          <h1 class="lblue">Ether Explorations</h1>
+    <a href="https://www.facebook.com/events/470554953295579">
+        <header class="l-fc l-fc-f">
+          <div class="">
+          <img src="img/ether-water-cover.png">
+          </div>
       </header>
     </a>
 
@@ -44,7 +47,7 @@
     </div>
 
     <div class="flex-square">
-      <a href="http://placehold.it"><img src="img/sq.png"></a>
+      <a href="http://placehold.it"><img src="img/fresh.png"></a>
     </div>
   </section>
 
@@ -52,46 +55,15 @@
   <!--Gallery-->
   <section class="flex-container">
      <div class=" flex-square">
-      <a href="http://placehold.it"><img src="img/sq.png"></a>
+      <a href="http://placehold.it"><img src="img/sample-content-2.png"></a>
     </div>
 
     <div class="flex-twothirds">
-      <p>Introductory Phrase</p>
-      <h2 class="lpink">New Event</h2>
+      <p>ether.explorations@gmail.com</p>
+      <h2 class="lpink">Get in Touch</h2>
     </div>
   </section>
 
-  <!--<section class="flex-container">
-    <div class="flex-twothirds">
-      <p>Introductory Pharse</p>
-      <h2 class="lblue">New Event</h2>
-    </div>
-
-     <div class="flex-square">
-      <a href="http://placehold.it"><img src="img/sq.png"></a>
-    </div>
-  </section> -->
-
-  <!--Two Pictures with Links-->
-    <section class="flex-container">
-      <div class="flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/260x260"></a>
-    </div>
-    <div class="flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/260x260"></a>
-    </div>
-    </section>
-
-    <!--contact-->
-    <section class="flex-container">
-     <div class="flex-twothirds">
-      <p>Contact</p>
-    </div>
-
-    <div class="flex-square">
-      <h2 class="lorange">New Event</h2>
-    </div>
-  </section>
 
 
 
