--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
   <section class="flex-container">
     <div class="flex-twothirds">
       <p>Webzine + Compilation #02</p>
-      <h2 class="lpink">Fresh</h2>
+      <a href="zine.html"><h2 class="lpink">Fresh</h2></a>
     </div>
 
     <div class="flex-square">
-      <a href="http://placehold.it"><img src="img/fresh.png"></a>
+      <a href="zine.html"><img src="img/fresh.png"></a>
     </div>
   </section>
 
@@ -55,12 +55,12 @@
   <!--Gallery-->
   <section class="flex-container">
      <div class=" flex-square">
-      <a href="http://placehold.it"><img src="img/sample-content-2.png"></a>
+      <a href="events.html"><img src="img/sample-content-2.png"></a>
     </div>
 
     <div class="flex-twothirds">
-      <p>ether.explorations@gmail.com</p>
-      <h2 class="lpink">Get in Touch</h2>
+      <a href="mailto:ether.explorations@gmail.com"><p>ether.explorations@gmail.com</p></a>
+      <a href="mailto:ether.explorations@gmail.com"><h2 class="lpink">Get in Touch</h2></a>
     </div>
   </section>
 
@@ -68,9 +68,9 @@
 
 
   <footer>
-    <a href="#"><i class="fa fa-facebook fa-4" aria-hidden="true"></i></a>
-    <a href="#"><i class="fa fa-soundcloud fa-4" aria-hidden="true"></i></a>
-    <a href="#"><i class="fa fa-bandcamp fa-4" aria-hidden="true"></i></a>
+    <a href="https://www.facebook.com/etherexplorations/"><i class="fa fa-facebook fa-4" aria-hidden="true"></i></a>
+    <a href="https://soundcloud.com/etherexplorations"><i class="fa fa-soundcloud fa-4" aria-hidden="true"></i></a>
+    <a href="https://etherexplorations.bandcamp.com"><i class="fa fa-bandcamp fa-4" aria-hidden="true"></i></a>
     <h5>&copy; 2017 Ether Explorations</h5>
   </footer>
 
