--- a/events.html
+++ b/events.html
@@ -69,10 +69,10 @@
   </section>
 
   <footer>
-    <a href="#"><i class="fa fa-facebook fa-4" aria-hidden="true"></i></a>
-    <a href="#"><i class="fa fa-soundcloud fa-4" aria-hidden="true"></i></a>
-    <a href="#"><i class="fa fa-bandcamp fa-4" aria-hidden="true"></i></a>
-    <p>&copy; 2017 Ether Explorations</p>
+    <a href="https://www.facebook.com/etherexplorations/"><i class="fa fa-facebook fa-4" aria-hidden="true"></i></a>
+    <a href="https://soundcloud.com/etherexplorations"><i class="fa fa-soundcloud fa-4" aria-hidden="true"></i></a>
+    <a href="https://etherexplorations.bandcamp.com"><i class="fa fa-bandcamp fa-4" aria-hidden="true"></i></a>
+    <h5>&copy; 2017 Ether Explorations</h5>
   </footer>
 
    </main>
